test/corpus/basic.txt
================================================================================
Simple assignment
================================================================================

name = "test"

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (assignment
      left: (identifier)
      right: (primary_expression
        (string
          (double_quoted_string))))))

================================================================================
If statement
================================================================================

if x > 0:
    print("yes")

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (primary_expression
        (identifier))
      (primary_expression
        (number
          (integer))))
    (block
      (expression_statement
        (call_expression
          function: (identifier)
          (argument_list
            (primary_expression
              (string
                (double_quoted_string)))))))))

================================================================================
Function definition
================================================================================

fn double(x):
    return x * 2

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)))
    (block
      (return_statement
        (binary_expression
          (primary_expression
            (identifier))
          (primary_expression
            (number
              (integer))))))))
